--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,5 +9,8 @@
     <p><a href="about">About <%=shopName%></a></p>
     <p><a href="search">Search for books</a></p>
     <p><a href="register">Register with us</a></p>
+    <p><a href="addbook">Add a new book</a></p>
+    <p><a href="bargainbooks">Bargain books</a></p>
+    <p><a href="list">list books</a></p>
   </body>
 </html>
